[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uncivmod"
version = "1.0.0a0"
description = "The unciv module aims to aid with the modding of the unciv game."
readme = "README.md"
authors = [
  { name="GrowingMycelium"},
]
requires-python = ">=3.12"
license = "MPL-2.0"
keywords = [
  "unciv",
  "modding"
]
dependencies = [
  "pillow",
  "attrs"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [project.optional-dependencies]
# dev = [
#   "...",
# ]

[project.urls]
Homepage = "https://github.com/Why-not-now/uncivmod"
Issues = "https://github.com/Why-not-now/uncivmod/issues"